feat: Add media service client
